# advent2025

./: .gitignore  advent.py  pyproject.toml
days/: __init__.py  day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  template.py
tests/: test_day_01.py  test_day_02.py  test_day_03.py  test_day_04.py  test_day_05.py  test_day_06.py  test_day_07.py
